--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -45,6 +45,10 @@
                 <source>I agree to the terms of service</source>
                 <target>I agree to the terms of service</target>
             </trans-unit>
+            <trans-unit id="register.email">
+                <source>Email</source>
+                <target>Email</target>
+            </trans-unit>
             <trans-unit id="register.username">
                 <source>Username</source>
                 <target>Username</target>
@@ -120,6 +124,10 @@
                 <source>Back to the main page.</source>
                 <target>Back to the main page.</target>
             </trans-unit>
+            <trans-unit id="flashes.new_studio">
+                <source>The new studio was added to your account</source>
+                <target>The new studio was added to your account</target>
+            </trans-unit>
 
             <trans-unit id="email.registration">
                 <source>email.registration</source>
@@ -188,6 +196,34 @@
             <trans-unit id="profile.new_repeated_password">
                 <source>New repeated password</source>
                 <target>New repeated password</target>
+            </trans-unit>
+            <trans-unit id="profile.studio">
+                <source>Studio</source>
+                <target>Studio</target>
+            </trans-unit>
+            <trans-unit id="profile.studios">
+                <source>Studios</source>
+                <target>Studios</target>
+            </trans-unit>
+            <trans-unit id="profile.add_new_studio">
+                <source>Add new studio</source>
+                <target>Add new studio</target>
+            </trans-unit>
+            <trans-unit id="profile.studio_name">
+                <source>Studio Name</source>
+                <target>Studio Name</target>
+            </trans-unit>
+            <trans-unit id="profile.studio_country">
+                <source>Country</source>
+                <target>Country</target>
+            </trans-unit>
+            <trans-unit id="profile.studio_address">
+                <source>Address</source>
+                <target>Address</target>
+            </trans-unit>
+            <trans-unit id="profile.studio_styles">
+                <source>Styles</source>
+                <target>Styles</target>
             </trans-unit>
 
             <trans-unit id="search.search">
