--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -228,6 +228,10 @@
                 <source>Style</source>
                 <target>Style</target>
             </trans-unit>
+            <trans-unit id="search.no_result">
+                <source>No result found</source>
+                <target>Aucun résultat trouvé</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
