--- a/translations/validators.de.xlf
+++ b/translations/validators.de.xlf
@@ -7,8 +7,8 @@
                 <target>Diese Email wird bereits verwendet</target>
             </trans-unit>
             <trans-unit id="register.usernameused">
-                <source>This username is already used</source>
-                <target>Dieser Benutzername wird bereits verwendet</target>
+                <source>This name is already used</source>
+                <target>Dieser Name wird bereits verwendet</target>
             </trans-unit>
 
             <trans-unit id="forgotten.email_not_found">
