--- a/translations/validators.en.xlf
+++ b/translations/validators.en.xlf
@@ -7,8 +7,8 @@
                 <target>This e-mail is already used</target>
             </trans-unit>
             <trans-unit id="register.usernameused">
-                <source>This username is already used</source>
-                <target>This username is already used</target>
+                <source>This name is already used</source>
+                <target>This name is already used</target>
             </trans-unit>
 
             <trans-unit id="forgotten.email_not_found">
