--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -128,6 +128,14 @@
                 <source>The new studio was added to your account</source>
                 <target>The new studio was added to your account</target>
             </trans-unit>
+            <trans-unit id="flashes.update_studio">
+                <source>Update studio</source>
+                <target>Update studio</target>
+            </trans-unit>
+            <trans-unit id="flashes.studio_updated">
+                <source>The studio was updated</source>
+                <target>The studio was updated</target>
+            </trans-unit>
 
             <trans-unit id="email.registration">
                 <source>email.registration</source>
