--- a/translations/validators.hu.xlf
+++ b/translations/validators.hu.xlf
@@ -15,6 +15,11 @@
                 <source>This email is not found</source>
                 <target>Ez az email nem található</target>
             </trans-unit>
+
+            <trans-unit id="flashes.studio_employee_already">
+                <source>This user is already an employee for this period</source>
+                <target>Ez a felhasználó már létezik munkavállalóként ebben az időszakban</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
