--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -207,6 +207,10 @@
                 <source>Welcome to the </source>
                 <target>Bienvenue sur le </target>
             </trans-unit>
+            <trans-unit id="index.welcomeadd">
+                <source> oldalon</source>
+                <target></target>
+            </trans-unit>
             <trans-unit id="index.register">
                 <source>Register here</source>
                 <target>Inscrivez-vous ici</target>
